<resources>
    <string name="app_name">NavigationWeather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="wind_speed">Wind speed</string>
    <string name="pressure">pressure</string>
    <string name="settings">settings</string>
    <string name="info">info</string>
    <string name="add_city">Add city</string>
    <string name="search">search</string>
    <string name="weather_forecast">Weather forecast</string>
    <string name="communicate">Communicate</string>
    <string name="show_pressure">show_pressure</string>
    <string name="show_wind_speed">show_wind_speed</string>

</resources>
