<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:checkableBehavior="all">

        <item
            android:id="@+id/windSpeed"
            android:orderInCategory="200"
            android:title="@string/wind_speed"
            app:showAsAction="never" />

        <item
            android:id="@+id/pressure"
            android:orderInCategory="300"
            android:title="@string/pressure"
            app:showAsAction="never" />

    </group>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="160"
        android:icon="@android:drawable/ic_menu_manage"
        android:title="@string/action_settings"
        android:checked="true"
        android:checkable="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_info"
        android:orderInCategory="110"
        android:title="@string/info"
        android:icon="@android:drawable/ic_dialog_info"
        app:showAsAction="never" />

    <item
        android:id="@+id/add_city"
        android:orderInCategory="150"
        android:title="@string/add_city"
        android:icon="@android:drawable/ic_menu_add"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_search"
        android:orderInCategory="120"
        android:title="@string/search"
        android:icon="@android:drawable/ic_menu_search"
        app:showAsAction="ifRoom" />

</menu>
